--- a/dev-util/darcs/ChangeLog
+++ b/dev-util/darcs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/darcs
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/darcs/Attic/ChangeLog,v 1.37 2005/07/26 21:23:05 kosmikus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/darcs/Attic/ChangeLog,v 1.38 2005/08/08 06:28:23 kosmikus Exp $
+
+  08 Aug 2005; Andres Loeh <kosmikus@gentoo.org> darcs-1.0.3_rc1.ebuild,
+  darcs-1.0.3.ebuild:
+  Restored missing ~amd64 flags.
 
 *darcs-1.0.3 (26 Jul 2005)
 
