--- a/app-accessibility/gnopernicus/ChangeLog
+++ b/app-accessibility/gnopernicus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/gnopernicus
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/gnopernicus/Attic/ChangeLog,v 1.60 2005/07/25 17:42:25 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/gnopernicus/Attic/ChangeLog,v 1.61 2005/08/08 08:38:07 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> gnopernicus-0.10.9.ebuild:
+  Stable on ppc64
 
   25 Jul 2005; Guy Martin <gmsoft@gentoo.org> gnopernicus-0.10.9.ebuild:
   Stable on hppa.
