--- a/app-accessibility/gok/ChangeLog
+++ b/app-accessibility/gok/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/gok
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/gok/ChangeLog,v 1.53 2005/07/25 17:45:46 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/gok/ChangeLog,v 1.54 2005/08/08 08:38:49 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> gok-1.0.5.ebuild:
+  Stable on ppc64
 
   25 Jul 2005; Guy Martin <gmsoft@gentoo.org> gok-1.0.5.ebuild:
   Stable on hppa.
