--- a/app-i18n/anthy/ChangeLog
+++ b/app-i18n/anthy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/anthy
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.59 2005/08/03 19:48:40 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/anthy/ChangeLog,v 1.60 2005/08/08 08:40:03 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> anthy-6700b.ebuild:
+  Stable on ppc64
 
   03 Aug 2005; Bryan Østergaard <kloeri@gentoo.org> anthy-6700b.ebuild:
   Stable on alpha.
