--- a/app-text/ggv/ChangeLog
+++ b/app-text/ggv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/ggv
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/ggv/Attic/ChangeLog,v 1.102 2005/08/03 20:11:49 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/ggv/Attic/ChangeLog,v 1.103 2005/08/08 08:52:43 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> ggv-2.8.5.ebuild:
+  Stable on ppc64
 
   03 Aug 2005; Bryan Østergaard <kloeri@gentoo.org> ggv-2.8.5.ebuild:
   Stable on alpha.
