--- a/dev-libs/libxslt/ChangeLog
+++ b/dev-libs/libxslt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxslt
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.115 2005/08/03 22:16:15 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.116 2005/08/08 14:38:10 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> libxslt-1.1.14-r2.ebuild:
+  Stable on ppc64
 
   03 Aug 2005; Bryan Østergaard <kloeri@gentoo.org>
   libxslt-1.1.14-r2.ebuild:
