--- a/gnome-base/gnome-vfs/ChangeLog
+++ b/gnome-base/gnome-vfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-vfs
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.162 2005/08/02 17:40:37 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.163 2005/08/08 14:42:41 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> gnome-vfs-2.10.1-r1.ebuild:
+  Stable on ppc64
 
   02 Aug 2005; Simon Stelling <blubb@gentoo.org> gnome-vfs-2.10.1-r1.ebuild:
   stable on amd64
