--- a/gnome-base/libglade/ChangeLog
+++ b/gnome-base/libglade/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libglade
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libglade/ChangeLog,v 1.76 2005/08/02 17:40:53 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libglade/ChangeLog,v 1.77 2005/08/08 14:43:17 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> libglade-2.5.1.ebuild:
+  Stable on ppc64
 
   02 Aug 2005; Simon Stelling <blubb@gentoo.org> libglade-2.5.1.ebuild:
   stable on amd64
