--- a/gnome-base/libgnomeprint/ChangeLog
+++ b/gnome-base/libgnomeprint/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libgnomeprint
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomeprint/ChangeLog,v 1.98 2005/08/02 17:43:32 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomeprint/ChangeLog,v 1.99 2005/08/08 14:43:59 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org>
+  libgnomeprint-2.10.3.ebuild:
+  Stable on ppc64
 
   02 Aug 2005; Simon Stelling <blubb@gentoo.org>
   libgnomeprint-2.10.3.ebuild:
