--- a/gnome-extra/gal/ChangeLog
+++ b/gnome-extra/gal/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gal
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gal/Attic/ChangeLog,v 1.107 2005/08/02 17:33:52 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gal/Attic/ChangeLog,v 1.108 2005/08/08 14:50:42 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> gal-2.4.3.ebuild:
+  Stable on ppc64
 
   02 Aug 2005; Simon Stelling <blubb@gentoo.org> gal-2.4.3.ebuild:
   stable on amd64
