--- a/gnome-extra/gnome-games/ChangeLog
+++ b/gnome-extra/gnome-games/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-games
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.118 2005/08/02 17:35:21 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.119 2005/08/08 14:51:59 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org> gnome-games-2.10.1.ebuild:
+  Stable on ppc64
 
   02 Aug 2005; Simon Stelling <blubb@gentoo.org> gnome-games-2.10.1.ebuild:
   stable on amd64
