--- a/x11-themes/gtk-engines-xfce/ChangeLog
+++ b/x11-themes/gtk-engines-xfce/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.34 2005/08/02 17:48:09 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.35 2005/08/08 15:07:22 corsair Exp $
+
+  08 Aug 2005; Markus Rothe <corsair@gentoo.org>
+  gtk-engines-xfce-2.2.7.ebuild:
+  Stable on ppc64
 
   02 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   gtk-engines-xfce-2.2.7.ebuild:
