--- a/kde-base/kpdf/ChangeLog
+++ b/kde-base/kpdf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpdf
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpdf/Attic/ChangeLog,v 1.20 2005/08/07 23:26:25 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kpdf/Attic/ChangeLog,v 1.21 2005/08/08 17:48:35 anarchy Exp $
+
+  08 Aug 2005; Jory A. Pratt <anarchy@gentoo.org> kpdf-3.4.1-r1.ebuild:
+  Stable on ppc wrt bug #100263
 
   07 Aug 2005; Jason Wever <weeve@gentoo.org> kpdf-3.4.1-r1.ebuild:
   Stable on SPARC wrt security bug #100263.
