--- a/x11-proto/dmxproto/ChangeLog
+++ b/x11-proto/dmxproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/dmxproto
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/dmxproto/ChangeLog,v 1.1 2005/08/08 03:25:55 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/dmxproto/ChangeLog,v 1.2 2005/08/08 17:53:10 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> dmxproto-2.2.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *dmxproto-2.2 (08 Aug 2005)
 
