--- a/x11-proto/inputproto/ChangeLog
+++ b/x11-proto/inputproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/inputproto
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.1 2005/08/08 03:28:49 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.2 2005/08/08 17:55:10 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> inputproto-1.3.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *inputproto-1.3 (08 Aug 2005)
 
