--- a/x11-proto/resourceproto/ChangeLog
+++ b/x11-proto/resourceproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/resourceproto
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/resourceproto/ChangeLog,v 1.1 2005/08/08 03:32:12 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/resourceproto/ChangeLog,v 1.2 2005/08/08 17:57:34 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org>
+  resourceproto-1.0.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *resourceproto-1.0 (08 Aug 2005)
 
