--- a/x11-proto/xcmiscproto/ChangeLog
+++ b/x11-proto/xcmiscproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xcmiscproto
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.1 2005/08/08 03:34:08 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xcmiscproto/ChangeLog,v 1.2 2005/08/08 17:59:02 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> xcmiscproto-1.1.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *xcmiscproto-1.1 (08 Aug 2005)
 
