--- a/x11-proto/xf86dgaproto/ChangeLog
+++ b/x11-proto/xf86dgaproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xf86dgaproto
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86dgaproto/ChangeLog,v 1.1 2005/08/08 03:35:35 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86dgaproto/ChangeLog,v 1.2 2005/08/08 18:00:03 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> xf86dgaproto-2.0.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *xf86dgaproto-2.0 (08 Aug 2005)
 
