--- a/x11-proto/xf86vidmodeproto/ChangeLog
+++ b/x11-proto/xf86vidmodeproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86vidmodeproto
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.1 2005/08/08 03:37:31 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86vidmodeproto/ChangeLog,v 1.2 2005/08/08 18:01:27 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org>
+  xf86vidmodeproto-2.2.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *xf86vidmodeproto-2.2 (08 Aug 2005)
 
