--- a/x11-proto/xproxymanagementprotocol/ChangeLog
+++ b/x11-proto/xproxymanagementprotocol/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xproxymanagementprotocol
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xproxymanagementprotocol/Attic/ChangeLog,v 1.1 2005/08/08 03:38:29 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xproxymanagementprotocol/Attic/ChangeLog,v 1.2 2005/08/08 18:02:07 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org>
+  xproxymanagementprotocol-1.0.ebuild:
+  Add ~sparc keyword (modular X testing on sparc).
 
 *xproxymanagementprotocol-1.0 (08 Aug 2005)
 
