--- a/x11-libs/libXext/ChangeLog
+++ b/x11-libs/libXext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXext
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.1 2005/08/08 04:27:37 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXext/ChangeLog,v 1.2 2005/08/08 19:08:32 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> libXext-0.99.0.ebuild:
+  Add ~sparc keyword (modular X testing).
 
 *libXext-0.99.0 (08 Aug 2005)
 
