--- a/kde-base/kdegraphics/ChangeLog
+++ b/kde-base/kdegraphics/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdegraphics
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdegraphics/Attic/ChangeLog,v 1.180 2005/08/08 17:51:25 anarchy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdegraphics/Attic/ChangeLog,v 1.181 2005/08/08 20:13:47 gmsoft Exp $
+
+  08 Aug 2005; Guy Martin <gmsoft@gentoo.org> kdegraphics-3.3.2-r3.ebuild,
+  kdegraphics-3.4.1-r1.ebuild:
+  Stable on hppa.
 
   08 Aug 2005; Jory A. Pratt <anarchy@gentoo.org>
   kdegraphics-3.3.2-r3.ebuild, kdegraphics-3.4.1-r1.ebuild:
