--- a/x11-misc/xcursor-themes/ChangeLog
+++ b/x11-misc/xcursor-themes/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xcursor-themes
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcursor-themes/Attic/ChangeLog,v 1.1 2005/08/08 05:09:04 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcursor-themes/Attic/ChangeLog,v 1.2 2005/08/08 22:46:57 fmccor Exp $
+
+  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org>
+  xcursor-themes-0.99.0.ebuild:
+  Add ~sparc keyword (X Modular testing).
 
 *xcursor-themes-0.99.0 (08 Aug 2005)
 
