--- a/sys-libs/cracklib/ChangeLog
+++ b/sys-libs/cracklib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/cracklib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.76 2005/07/19 20:50:31 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.77 2005/08/09 00:45:01 ka0ttic Exp $
+
+  09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> cracklib-2.8.3-r1.ebuild:
+  Stable on mips.
 
   19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
   cracklib-2.8.3-r1.ebuild:
