--- a/media-libs/openal/ChangeLog
+++ b/media-libs/openal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/openal
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/openal/ChangeLog,v 1.39 2005/06/24 06:57:26 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/openal/ChangeLog,v 1.40 2005/08/09 00:55:51 eradicator Exp $
+
+  09 Aug 2005; Jeremy Huddleston <eradicator@gentoo.org>
+  openal-20050504-r1.ebuild:
+  Stable amd64, sparc, x86.
 
 *openal-20050504-r1 (24 Jun 2005)
 
