--- a/app-admin/webmin/ChangeLog
+++ b/app-admin/webmin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/webmin
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/webmin/ChangeLog,v 1.92 2005/08/07 19:56:03 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/webmin/ChangeLog,v 1.93 2005/08/09 07:25:32 corsair Exp $
+
+  09 Aug 2005; Markus Rothe <corsair@gentoo.org> webmin-1.210.ebuild:
+  Stable on ppc64
 
   07 Aug 2005; Jeremy Huddleston <eradicator@gentoo.org>
   webmin-1.210.ebuild:
