--- a/www-apps/openwebstats/ChangeLog
+++ b/www-apps/openwebstats/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/openwebstats
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/openwebstats/ChangeLog,v 1.1 2005/08/09 12:33:40 rl03 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/openwebstats/ChangeLog,v 1.2 2005/08/09 14:21:21 rl03 Exp $
+
+  09 Aug 2005; Renat Lumpau <rl03@gentoo.org> openwebstats-1.1.ebuild:
+  removed unnecessary eutils
 
 *openwebstats-1.1 (09 Aug 2005)
 
