--- a/app-mobilephone/moto4lin/ChangeLog
+++ b/app-mobilephone/moto4lin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/moto4lin
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/moto4lin/Attic/ChangeLog,v 1.1 2005/08/08 19:40:02 r3pek Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/moto4lin/Attic/ChangeLog,v 1.2 2005/08/09 15:41:34 dholm Exp $
+
+  09 Aug 2005; David Holm <dholm@gentoo.org> moto4lin-0.3.ebuild:
+  Added to ~ppc.
 
 *moto4lin-0.3 (08 Aug 2005)
 
