--- a/games-strategy/wesnoth/ChangeLog
+++ b/games-strategy/wesnoth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.54 2005/08/09 16:35:28 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.55 2005/08/09 16:39:04 mr_bones_ Exp $
+
+  09 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
+  -wesnoth-0.9.1.ebuild, -wesnoth-0.9.2.ebuild, -wesnoth-0.9.3.ebuild:
+  clean old versions
 
 *wesnoth-0.9.5 (09 Aug 2005)
 
