--- a/net-wireless/at76c503a/ChangeLog
+++ b/net-wireless/at76c503a/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/at76c503a
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/at76c503a/ChangeLog,v 1.3 2005/08/08 19:16:42 genstef Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/at76c503a/ChangeLog,v 1.4 2005/08/09 18:01:39 dholm Exp $
+
+  09 Aug 2005; David Holm <dholm@gentoo.org> at76c503a-0.12_beta23.ebuild:
+  Added to ~ppc.
 
 *at76c503a-0.12_beta23 (08 Aug 2005)
 
