--- a/app-shells/scsh/ChangeLog
+++ b/app-shells/scsh/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/scsh
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/scsh/ChangeLog,v 1.12 2005/01/01 16:00:16 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/scsh/ChangeLog,v 1.13 2005/08/09 18:18:29 mkennedy Exp $
+
+*scsh-0.6.6 (09 Aug 2005)
+
+  09 Aug 2005; Matthew Kennedy <mkennedy@gentoo.org>
+  +files/0.6.6-Makefile.in-doc-dir-gentoo.patch, +scsh-0.6.6.ebuild:
+  New upstream; First SCSH port to use the SCSH eclass; Resolves Bug #58564.
 
 *scsh-0.6.5 (26 Feb 2004)
 
