--- a/sys-cluster/xpvm/ChangeLog
+++ b/sys-cluster/xpvm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/xpvm
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/xpvm/Attic/ChangeLog,v 1.12 2005/08/09 20:53:29 tantive Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/xpvm/Attic/ChangeLog,v 1.13 2005/08/09 20:57:53 tantive Exp $
+
+  09 Aug 2005; Michael Imhof <tantive@gentoo.org> -xpvm-1.2.5-r2.ebuild,
+  -xpvm-1.2.5-r3.ebuild:
+  Cleaned out old ebuilds.
 
 *xpvm-1.2.5-r4 (09 Aug 2005)
 
