--- a/app-misc/uptimed/ChangeLog
+++ b/app-misc/uptimed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/uptimed
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.28 2005/08/09 16:03:06 ka0ttic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.29 2005/08/09 21:43:03 ferdy Exp $
+
+  09 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org> uptimed-0.3.3.ebuild:
+  stable on alpha
 
   09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> uptimed-0.3.3.ebuild:
   Stable on mips.
