--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.94 2005/08/07 22:25:27 chainsaw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.95 2005/08/09 23:42:46 pylon Exp $
+
+  09 Aug 2005; Lars Weiler <pylon@gentoo.org>
+  vanilla-sources-2.6.12.3.ebuild:
+  Stable on ppc.
 
 *vanilla-sources-2.6.13_rc6 (07 Aug 2005)
 
