--- a/games-board/six/ChangeLog
+++ b/games-board/six/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-board/six
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/six/Attic/ChangeLog,v 1.11 2006/05/31 15:49:27 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/six/Attic/ChangeLog,v 1.12 2006/06/21 00:24:40 mr_bones_ Exp $
+
+*six-0.5.3 (19 Jun 2006)
+
+  19 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org> +six-0.5.3.ebuild:
+  version bump
 
   31 May 2006; Diego Pettenò <flameeyes@gentoo.org> six-0.5.2.ebuild:
   Make sure aRTs is required. Thanks to Jakub Moc.
