--- a/x11-drivers/xf86-video-v4l/ChangeLog
+++ b/x11-drivers/xf86-video-v4l/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-v4l
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-v4l/ChangeLog,v 1.14 2006/04/14 17:30:44 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-v4l/ChangeLog,v 1.15 2006/06/21 02:30:42 geoman Exp $
+
+  21 Jun 2006; Stephen P. Becker <geoman@gentoo.org>
+  xf86-video-v4l-0.1.1.ebuild:
+  added ~mips keyword
 
 *xf86-video-v4l-0.1.1 (14 Apr 2006)
 
