--- a/media-libs/netpbm/ChangeLog
+++ b/media-libs/netpbm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.117 2006/06/20 19:24:15 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.118 2006/06/21 13:21:38 gustavoz Exp $
+
+  21 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> netpbm-10.34.ebuild:
+  Stable on sparc wrt security #137344
 
 *netpbm-10.34 (20 Jun 2006)
 
