--- a/app-laptop/tp_smapi/ChangeLog
+++ b/app-laptop/tp_smapi/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-laptop/tp_smapi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/tp_smapi/ChangeLog,v 1.11 2006/05/28 12:23:05 brix Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/tp_smapi/ChangeLog,v 1.12 2006/06/21 17:52:23 brix Exp $
+
+*tp_smapi-0.21 (21 Jun 2006)
+
+  21 Jun 2006; Henrik Brix Andersen <brix@gentoo.org> +tp_smapi-0.21.ebuild:
+  Version bump.
 
   28 May 2006; Henrik Brix Andersen <brix@gentoo.org> tp_smapi-0.19.ebuild:
   Stable on x86.
