--- a/x11-terms/xterm/ChangeLog
+++ b/x11-terms/xterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.145 2006/06/21 22:21:58 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.146 2006/06/22 05:28:30 tsunam Exp $
+
+  22 Jun 2006; Joshua Jackson <tsunam@gentoo.org> xterm-215.ebuild:
+  Stable x86; bug #135974
 
   21 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> xterm-215.ebuild:
   Stable on sparc wrt security #135974
