--- a/app-dicts/kasumi/ChangeLog
+++ b/app-dicts/kasumi/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-dicts/kasumi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/kasumi/ChangeLog,v 1.17 2006/06/21 01:09:19 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-dicts/cvs-repo/gentoo-x86/app-dicts/kasumi/ChangeLog,v 1.18 2006/06/22 12:28:19 flameeyes Exp $
+
+  22 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
+  files/kasumi-2.0-gcc41.patch:
+  Replace GCC 4.1 patch with a working one, submitted by KIMURA Masaru in bug
+  #137540.
 
 *kasumi-2.0 (21 Jun 2006)
 
