--- a/dev-perl/Gtk2-Ex-PodViewer/ChangeLog
+++ b/dev-perl/Gtk2-Ex-PodViewer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Gtk2-Ex-PodViewer
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Gtk2-Ex-PodViewer/ChangeLog,v 1.7 2006/03/30 22:43:45 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Gtk2-Ex-PodViewer/ChangeLog,v 1.8 2006/06/22 18:20:18 gustavoz Exp $
+
+  22 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  Gtk2-Ex-PodViewer-0.14.ebuild:
+  Stable on sparc
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   Gtk2-Ex-PodViewer-0.14.ebuild:
