--- a/dev-perl/Gtk2-Ex-Simple-List/ChangeLog
+++ b/dev-perl/Gtk2-Ex-Simple-List/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Gtk2-Ex-Simple-List
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Gtk2-Ex-Simple-List/ChangeLog,v 1.4 2006/03/30 22:44:41 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Gtk2-Ex-Simple-List/ChangeLog,v 1.5 2006/06/22 18:19:33 gustavoz Exp $
+
+  22 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  Gtk2-Ex-Simple-List-0.50.ebuild:
+  Stable on sparc
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   Gtk2-Ex-Simple-List-0.50.ebuild:
