--- a/dev-ruby/sqlite-ruby/ChangeLog
+++ b/dev-ruby/sqlite-ruby/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/sqlite-ruby
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sqlite-ruby/ChangeLog,v 1.24 2006/06/06 16:54:00 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sqlite-ruby/ChangeLog,v 1.25 2006/06/22 19:29:32 grobian Exp $
+
+  22 Jun 2006; Fabian Groffen <grobian@gentoo.org>
+  sqlite-ruby-2.2.3-r1.ebuild:
+  Marked ~ppc-macos (bug #74937)
 
   06 Jun 2006; Simon Stelling <blubb@gentoo.org> sqlite-ruby-2.2.2.ebuild,
   sqlite-ruby-2.2.3-r1.ebuild:
