--- a/media-sound/mpg123/ChangeLog
+++ b/media-sound/mpg123/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpg123
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.99 2006/06/22 16:04:30 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.100 2006/06/22 20:59:34 tcort Exp $
+
+  22 Jun 2006; Thomas Cort <tcort@gentoo.org> mpg123-0.59s-r11.ebuild:
+  Stable on alpha wrt security Bug #133988.
 
   22 Jun 2006; Fabian Groffen <grobian@gentoo.org> mpg123-0.59s-r11.ebuild:
   Marked ppc-macos stable (bug #133988)
