--- a/media-tv/mythtv/ChangeLog
+++ b/media-tv/mythtv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-tv/mythtv
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.100 2006/06/14 23:10:13 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.101 2006/06/23 01:25:22 cardoe Exp $
+
+*mythtv-0.19_p10281 (23 Jun 2006)
+
+  23 Jun 2006; Doug Goldstein <cardoe@gentoo.org>
+  +mythtv-0.19_p10281.ebuild:
+  new 0.19-fixes snapshot in testing
 
   14 Jun 2006; Doug Goldstein <cardoe@gentoo.org>
   mythtv-0.19_p9163-r1.ebuild:
