--- a/media-plugins/vdr-proxy/ChangeLog
+++ b/media-plugins/vdr-proxy/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-proxy
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-proxy/ChangeLog,v 1.3 2006/06/23 08:49:38 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-proxy/ChangeLog,v 1.4 2006/06/23 08:51:20 zzam Exp $
+
+  23 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
+  -vdr-proxy-0.1.1.ebuild:
+  Removed older version.
 
   23 Jun 2006; Matthias Schwarzott <zzam@gentoo.org> vdr-proxy-0.1.2.ebuild:
   Stable on x86.
